<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="@string/new_student"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/studentImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_student"
        android:contentDescription="@string/student_image"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/studentImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/studentImage"
        app:layout_constraintStart_toEndOf="@id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toEndOf="@id/idLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/idTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idTextView"
        app:layout_constraintStart_toEndOf="@id/phoneLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
        app:layout_constraintStart_toEndOf="@id/addressLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/checkedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checked"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/addressTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/checkedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addressTextView"
        app:layout_constraintStart_toEndOf="@id/checkedLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
